[gd_scene load_steps=3 format=3 uid="uid://85abbp7b7buc"]

[ext_resource type="Script" path="res://GUI/Scripts/leaderboard.gd" id="1_3gtdb"]
[ext_resource type="PackedScene" uid="uid://dgygkbtm0burn" path="res://addons/quiver_leaderboards/leaderboard_ui.tscn" id="1_xudit"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gtdb")

[node name="LeaderboardUI" parent="." instance=ExtResource("1_xudit")]
layout_mode = 1
leaderboard_id = "godot_gate-main-1OxY"
score_filter = 1
current_player_highlight_color = Color(0, 0.224, 0.32, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="LeaderboardUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -40.0
offset_right = 51.0
grow_horizontal = 2
grow_vertical = 0

[node name="To_Submit_Score" type="Button" parent="LeaderboardUI/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Submit Score"

[node name="Exit" type="Button" parent="LeaderboardUI/HBoxContainer"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Exit"

[node name="SubmitContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -22.5
offset_right = 144.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="SubmitContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="score_b" type="Button" parent="SubmitContainer"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Score"

[node name="submit_b" type="Button" parent="SubmitContainer"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Submit"

[connection signal="pressed" from="LeaderboardUI/HBoxContainer/To_Submit_Score" to="." method="_on_to_submit_score_pressed"]
[connection signal="pressed" from="LeaderboardUI/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="text_submitted" from="SubmitContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="SubmitContainer/score_b" to="." method="_on_score_b_pressed"]
[connection signal="pressed" from="SubmitContainer/submit_b" to="." method="_on_submit_b_pressed"]
